refactor: 전체적인 코드 선언적으로 변경